Maybed fixed scrolling on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,8 @@
 
+body {
+  overflow:hidden;
+  position: fixed;
+}
 
 .joystickContainer {
   margin: 0;
